markup is ready

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,2 +1,7 @@
-@import 'common';
 @import 'reset';
+@import 'page';
+@import 'common';
+@import 'typography';
+@import 'table';
+@import 'menu';
+@import 'board';
