--- a/src/styles/page.scss
+++ b/src/styles/page.scss
@@ -1,32 +1,12 @@
 .page {
+  align-items: center;
   display: flex;
-  flex-direction: column;
   justify-content: center;
   min-height: 100vh;
   position: relative;
-  width: 100%;
-}
-
-.page__section {
-  align-items: flex-start;
-  box-sizing: border-box;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  width: 100%;
 }
 
 .page__content {
   box-sizing: border-box;
-  max-width: 1280px;
-  padding-left: 24px;
-  padding-right: 24px;
-  width: 100%;
-}
-
-@media screen and (min-width: 600px) {
-  .page__content {
-    padding-left: 32px;
-    padding-right: 32px;
-  }
+  width: 300px;
 }
